Fix unlocking wayland sessions

We were never issuing a repaint which confused thoroughly the
compositor.

BUG: 447705